Release 2.43.4

Copyright (c) 1998-2012 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.4 - March ??, 2012

    Corrected a bug in the processing of meta-calls for meta-predicates where
    the calling context would be set to "this" instead of "sender" whenever a
    meta-argument is one of the ::/2, {}/1, <</2, or :/2 control constructs.
    Thanks to Daniel Lyons for the bug report.

    Allow open lists of terminals in the body of grammar rules.

    Added an example of combining constraints defined in different objects
    to the "chr" example based on sample code posted by Gergö Barany on the
    SWI-Prolog mailing list.

    Updated the Vim syntax file for Logtalk, applying the patch contributed
    by Thilo Six.


2.43.3 - December 21, 2011

    Changed the compiler to take into account the uses/2 directive when
    compiling calls to the reflection built-in methods. This change extends
    the semantics of the uses/2 directive and allows easier migration from
    plain Prolog applications to Logtalk.

    Updated the implementation of the predicate_property/2 built-in method,
    adding a scope/1 property.

    Updated the Logtalk compiler to add information about a source file name,
    source file directory, and source file compiler options to the generated
    Prolog files. In previous versions, this information was registered only
    when loading a source file. The changes simplify building applications
    where Logtalk libraries are pre-compiled and pre-loaded.

    Updated the Logtalk compiler to print the name of the hook object used in
    the compilation of source files when the "hook" compiler flag is defined.
