@@ -15,6 +15,10 @@ RELEASE NOTES
 
 2.43.4 - March ??, 2012
 
+    Updated the Logtalk compiler in order to generate a warning when compiling
+    a complementing category for a complemented object that was compiled with
+    support for complementing categories turned off.
+
     Corrected a bug in the processing of meta-calls for meta-predicates where
     the calling context would be set to "this" instead of "sender" whenever a
     meta-argument is one of the ::/2, {}/1, <</2, or :/2 control constructs.
